tests/snapshots/file@base@field@set_on_num.lox.snap
---
source: tests/common/mod.rs
description: "123.foo = \"value\"; // expect runtime error: Only instances have fields.\n"
input_file: crafting_interpreters_test_files/field/set_on_num.lox
---
OUT: 

===
ERR: 
  × only instances have properties
   ╭────
 1 │ 123.foo = "value"; // expect runtime error: Only instances have fields.
   ·     ─┬─
   ·      ╰── here
   ╰────
